--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.3.0",
     "@react-pdf/renderer": "^4.3.2",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
     "antd": "^6.1.2",
     "dayjs": "^1.11.19",
